Add README, use ETag
