# src/main/java/com/springboot/blueprint/service/InstructorService.java
@@ -2,8 +2,10 @@ package com.springboot.blueprint.service;
 
 import com.springboot.blueprint.api.model.Instructor;
 import com.springboot.blueprint.mapper.InstructorJpaMapper;
+import com.springboot.blueprint.model.EntityVersion;
 import com.springboot.blueprint.repository.InstructorJpaRepository;
 import lombok.RequiredArgsConstructor;
+import org.springframework.data.util.Pair;
 import org.springframework.stereotype.Service;
 import org.springframework.transaction.annotation.Transactional;
 
@@ -16,10 +18,10 @@ public class InstructorService {
     private final InstructorJpaMapper instructorJpaMapper;
 
     @Transactional
-    public Instructor createInstructor(Instructor instructor) {
-
-        return instructorJpaMapper.toDto(instructorJpaRepository.persist(
-                instructorJpaMapper.toEntity(instructor)));
+    public Pair<Instructor, EntityVersion> createInstructor(Instructor instructor) {
+        var savedInstructor = instructorJpaRepository.persist(
+                instructorJpaMapper.toEntity(instructor));
+        return Pair.of(instructorJpaMapper.toDto(savedInstructor), EntityVersion.of(savedInstructor.getVersion()));
     }
 
 }
